Entrega Aplicando SASS - se agregan resto de las pages

--- a/scss/risestyle.scss
+++ b/scss/risestyle.scss
@@ -125,6 +125,12 @@ ul {
 	margin-top: 13px;
 }
 
+/* Deshabilitar botones */
+.disabled {
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
 @media screen and (max-width: 768px) {
 	ul {
 		li {
