--- a/css/risestyle.css
+++ b/css/risestyle.css
@@ -108,6 +108,11 @@ ul li a {
 .whatsapp-icon {
   margin-top: 13px; }
 
+/* Deshabilitar botones */
+.disabled {
+  cursor: not-allowed;
+  pointer-events: none; }
+
 @media screen and (max-width: 768px) {
   ul li {
     width: 100%;
