--- a/css/risestyle.css
+++ b/css/risestyle.css
@@ -38,9 +38,17 @@ ul li a {
 
 .contenido {
   text-align: center; }
+  .contenido h1 {
+    font-size: 4em; }
+  .contenido h2 {
+    font-size: 2.5em; }
 
 .container {
   width: 100%; }
+  .container img {
+    border: solid black;
+    border-radius: 10px;
+    width: 60%; }
 
 /*Pie de Pagina*/
 .pie-pagina {
