--- a/css/risestyle.css
+++ b/css/risestyle.css
@@ -12,6 +12,7 @@ h1 {
 .contenido h2 {
   padding: 20px; }
 
+/* Reseteo */
 * {
   margin: 0;
   padding: 0;
@@ -19,8 +20,10 @@ h1 {
 
 header {
   width: 100%;
-  padding: 40px;
+  padding: 20px;
   text-align: center; }
+  header img {
+    width: 10%; }
 
 nav ul {
   list-style: none;
@@ -121,6 +124,113 @@ ul li a {
   cursor: not-allowed;
   pointer-events: none; }
 
+/* Formulario*/
+#contact {
+  padding: 10px 0 10px; }
+
+.contact-text {
+  margin: 45px auto; }
+
+.mail-message-area {
+  width: 100%;
+  padding: 0 15px; }
+
+.mail-message {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8) !important;
+  -webkit-transition: all 0.7s;
+  -moz-transition: all 0.7s;
+  transition: all 0.7s;
+  margin: 0 auto;
+  border-radius: 0; }
+
+.not-visible-message {
+  height: 0px;
+  opacity: 0; }
+
+.visible-message {
+  height: auto;
+  opacity: 1;
+  margin: 25px auto 0; }
+
+.form {
+  width: 70%;
+  padding: 15px;
+  background: #f8f8f8;
+  border: 1px solid rgba(0, 0, 0, 0.075);
+  margin-bottom: 25px;
+  color: #727272 !important;
+  font-size: 13px;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s; }
+  .form:hover {
+    border: 2px solid #8BC3A3; }
+  .form:focus {
+    color: white;
+    outline: none;
+    border: 2px solid #8BC3A3; }
+
+.textarea {
+  height: 200px;
+  max-height: 200px;
+  max-width: 100%; }
+
+.button {
+  padding: 8px 12px;
+  background: #0A5175;
+  display: block;
+  width: 120px;
+  margin: 10px 0 0px 0;
+  border-radius: 3px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  font-size: 0.8em;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1); }
+  .button:hover {
+    background: #8BC3A3;
+    color: white; }
+
+.form-btn {
+  width: 180px;
+  display: inline;
+  height: auto;
+  padding: 15px;
+  color: #fff;
+  background: #8BC3A3;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  margin: auto;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1); }
+  .form-btn:hover {
+    background: #112d4e;
+    color: white;
+    border: none; }
+  .form-btn:active {
+    opacity: 0.9; }
+
+center {
+  margin-top: 330px; }
+
+input {
+  position: relative;
+  z-index: 9999; }
+
+.borcam {
+  border: solid #164884 1px;
+  border-radius: 5px; }
+
+/*Ajuste Mobile*/
 @media screen and (max-width: 768px) {
   ul li {
     width: 100%;
