--- a/scss/risestyle.scss
+++ b/scss/risestyle.scss
@@ -5,6 +5,7 @@
 $h1: map-get($map: $headers , $key: h1);
 $h2: map-get($map: $headers , $key: h2 );
 
+/* Reseteo */
 * {
 	margin: 0;
 	padding: 0;
@@ -13,8 +14,11 @@ $h2: map-get($map: $headers , $key: h2 );
 
 header {
 	width: 100%;
-	padding: 40px;
+	padding: 20px;
 	text-align: center;
+	img {
+		width: 10%;
+		}
 }
 nav {
 	ul {
@@ -144,6 +148,120 @@ ul {
     pointer-events: none;
 }
 
+/* Formulario*/
+#contact {
+	padding: 10px 0 10px;
+}
+.contact-text {
+	margin: 45px auto;
+}
+.mail-message-area {
+	width: 100%;
+	padding: 0 15px;
+}
+.mail-message {
+	width: 100%;
+	background: rgba(255,255,255, 0.8) !important;
+	-webkit-transition: all 0.7s;
+	-moz-transition: all 0.7s;
+	transition: all 0.7s;
+	margin: 0 auto;
+	border-radius: 0;
+}
+.not-visible-message {
+	height: 0px;
+	opacity: 0;
+}
+.visible-message {
+	height: auto;
+	opacity: 1;
+	margin: 25px auto 0;
+}
+.form {
+	width: 70%;
+	padding: 15px;
+	background: #f8f8f8;
+	border: 1px solid rgba(0, 0, 0, 0.075);
+	margin-bottom: 25px;
+	color: #727272 !important;
+	font-size: 13px;
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+	&:hover {
+		border: 2px solid #8BC3A3;
+	}
+	&:focus {
+		color: white;
+		outline: none;
+		border: 2px solid #8BC3A3;
+	}
+}
+.textarea {
+	height: 200px;
+	max-height: 200px;
+	max-width: 100%;
+}
+.button {
+	padding: 8px 12px;
+	background: #0A5175;
+	display: block;
+	width: 120px;
+	margin: 10px 0 0px 0;
+	border-radius: 3px;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+	text-align: center;
+	font-size: 0.8em;
+	box-shadow: 0px 1px 4px rgba(0,0,0, 0.10);
+	-moz-box-shadow: 0px 1px 4px rgba(0,0,0, 0.10);
+	-webkit-box-shadow: 0px 1px 4px rgba(0,0,0, 0.10);
+	&:hover {
+		background: #8BC3A3;
+		color: white;
+	}
+}
+.form-btn {
+	width: 180px;
+	display: inline;
+	height: auto;
+	padding: 15px;
+	color: #fff;
+	background: #8BC3A3;
+	border: none;
+	border-radius: 3px;
+	outline: none;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+	margin: auto;
+	box-shadow: 0px 1px 4px rgba(0,0,0, 0.10);
+	-moz-box-shadow: 0px 1px 4px rgba(0,0,0, 0.10);
+	-webkit-box-shadow: 0px 1px 4px rgba(0,0,0, 0.10);
+	&:hover {
+		background: $color_hover;
+		color: white;
+		border: none;
+	}
+	&:active {
+		opacity: 0.9;
+	}
+}
+center {
+	margin-top: 330px;
+}
+input {
+	position: relative;
+	z-index: 9999;
+}
+
+.borcam{
+	border: solid $color_bar_g 1px;
+	border-radius: 5px;
+}
+
+/*Ajuste Mobile*/
 @media screen and (max-width: 768px) {
 	ul {
 		li {
