--- a/scss/risestyle.scss
+++ b/scss/risestyle.scss
@@ -56,7 +56,12 @@ ul {
 	h2{
 		font-size: $h2;
 	}
-	
+	p {	
+		text-align: center justify;
+		margin-left:20%;
+		margin-right:20%;
+		padding-bottom: 10px;
+	}
 }
 
 .container {
