--- a/css/risestyle.css
+++ b/css/risestyle.css
@@ -34,14 +34,20 @@ nav ul {
     display: inline-block;
     padding: 20px; }
     nav ul li:hover {
-      background-color: #112d4e; }
+      text-decoration: underline; }
 
 ul li a {
   color: #fff;
   text-decoration: none; }
+  ul li a:hover {
+    color: aqua; }
 
 .navcustom {
   background: #164884; }
+
+.marcado {
+  color: aqua;
+  text-decoration: underline; }
 
 .contenido {
   text-align: center; }
@@ -141,28 +147,6 @@ ul li a {
 .contact-text {
   margin: 45px auto; }
 
-.mail-message-area {
-  width: 100%;
-  padding: 0 15px; }
-
-.mail-message {
-  width: 100%;
-  background: rgba(255, 255, 255, 0.8) !important;
-  -webkit-transition: all 0.7s;
-  -moz-transition: all 0.7s;
-  transition: all 0.7s;
-  margin: 0 auto;
-  border-radius: 0; }
-
-.not-visible-message {
-  height: 0px;
-  opacity: 0; }
-
-.visible-message {
-  height: auto;
-  opacity: 1;
-  margin: 25px auto 0; }
-
 .form {
   width: 70%;
   padding: 15px;
@@ -218,12 +202,12 @@ ul li a {
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
-  margin: auto;
+  margin: 15px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1); }
   .form-btn:hover {
-    background: #112d4e;
+    background: #25d366;
     color: white;
     border: none; }
   .form-btn:active {
