--- a/css/risestyle.css
+++ b/css/risestyle.css
@@ -81,21 +81,23 @@ ul li a {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 50px;
     padding: 45px 0px; }
-    .pie-pagina .grupo-1 .box figure {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
-      .pie-pagina .grupo-1 .box figure img {
-        width: 250px; }
-    .pie-pagina .grupo-1 .box h2 {
-      color: #fff;
-      margin-bottom: 25px;
-      font-size: 20px; }
-    .pie-pagina .grupo-1 .box p {
-      color: #efefef;
-      margin-bottom: 10px; }
+    .pie-pagina .grupo-1 .box {
+      text-align: center; }
+      .pie-pagina .grupo-1 .box figure {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .pie-pagina .grupo-1 .box figure img {
+          width: 250px; }
+      .pie-pagina .grupo-1 .box h2 {
+        color: #fff;
+        margin-bottom: 25px;
+        font-size: 20px; }
+      .pie-pagina .grupo-1 .box p {
+        color: #efefef;
+        margin-bottom: 10px; }
     .pie-pagina .grupo-1 .red-social a {
       display: inline-block;
       text-decoration: none;
